--- a/Q2-Workshop-July2019-cmee.ipynb
+++ b/Q2-Workshop-July2019-cmee.ipynb
@@ -142,7 +142,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -195,7 +196,12 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "scrolled": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -235,7 +241,12 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "scrolled": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -543,36 +554,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "nonitsxdada2/table-nonitsx-dada2.qzv does not exist.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-47b1d5ece6e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdemux\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVisualization\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'nonitsxdada2/table-nonitsx-dada2.qzv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdemux\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/qiime2-2018.11/lib/python3.5/site-packages/qiime2/sdk/result.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;34m\"\"\"Factory for loading Artifacts and Visualizations.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0marchiver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marchive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mArchiver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mArtifact\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_valid_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marchiver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/qiime2-2018.11/lib/python3.5/site-packages/qiime2/core/archive/archiver.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    297\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 299\u001b[0;31m         \u001b[0marchive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_archive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    300\u001b[0m         \u001b[0mFormat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_format_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marchive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    301\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mFormat\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/qiime2-2018.11/lib/python3.5/site-packages/qiime2/core/archive/archiver.py\u001b[0m in \u001b[0;36mget_archive\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    257\u001b[0m         \u001b[0mfilepath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    258\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mfilepath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 259\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s does not exist.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_ZipArchive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_archive_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: nonitsxdada2/table-nonitsx-dada2.qzv does not exist."
-     ]
-    }
-   ],
-   "source": [
-    "demux=Visualization.load('nonitsxdada2/table-nonitsx-dada2.qzv')\n",
-    "demux"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -625,65 +606,6 @@
     "--i-table nonitsxdada2/Single/table-single-dada2.qza \\\n",
     "--m-sample-metadata-file sample-metadata.tsv \\\n",
     "--o-visualization nonitsxdada2/Single/table-single-dada2.qzv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-15zmx0r8')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: 74809858-46da-45d5-a308-e4cadf54b340>"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "demux=Visualization.load('nonitsxdada2/Single/table-single-dada2.qzv')\n",
-    "demux"
    ]
   },
   {
@@ -772,65 +694,6 @@
     "--p-n-threads 3 \\\n",
     "--o-table table-trimmed-dada2.qza \\\n",
     "--output-dir dada2stat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ljcr63ub')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: f7337bd6-fafd-4498-9cc5-c6be713ac47b>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "demux=Visualization.load('table-single-trimmed-dada2.qzv')\n",
-    "demux"
    ]
   },
   {
@@ -1352,64 +1215,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-rzhgjr07')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: 6e9d5e4d-2d16-42d7-9208-03d6ed595b04>"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Visualization.load(\"taxa-bar-plot-sklearn.qzv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [
@@ -1449,59 +1254,6 @@
     "--i-taxonomy nonitsxdada2/Single/taxonomy-single-blast.qza \\\n",
     "--m-metadata-file sample-metadata.tsv \\\n",
     "--o-visualization nonitsxdada2/Single/taxa-bar-plot-blast.qzv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-gftctumi')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: 90982425-7fc7-4004-98d1-1eaab3c7de3e>"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Visualization.load(\"nonitsxdada2/Single/taxa-bar-plot-blast.qzv\")"
    ]
   },
   {
@@ -1673,34 +1425,6 @@
     "--p-sampling-depth 15700 \\\n",
     "--m-metadata-file sample-metadata.tsv \\\n",
     "--output-dir nonitsxdada2/Single/final/core-metrics-results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Visualization' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-144aaaa4b70a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mVisualization\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"nonitsxdada2/Single/final/core-metrics-results/bray_curtis_emperor.qzv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Visualization' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from qiime2.plugins.emperor.visualizers import plot\n",
-    "bce_results=Visualization.load(\"nonitsxdada2/Single/final/core-metrics-results/bray_curtis_emperor.qzv\")\n",
-    "bce= emperor.visualizers.plot"
    ]
   }
  ],
